Begin scimap analysis

--- a/manual_gating.ipynb
+++ b/manual_gating.ipynb
@@ -35,6 +35,28 @@
     "import anndata as ad\n",
     "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_path = ['/mnt/disks/ecdyer-disk1/data/MEL01-3-1.csv']\n",
+    "\n",
+    "# create the annData object\n",
+    "adata = sm.pp.mcmicro_to_scimap(feature_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the annData object (if needed)\n",
+    "adata.write('/mnt/disks/ecdyer-disk1/data/MEL01-3-1.h5ad')"
+   ]
   }
  ],
  "metadata": {
