Update manual gating notebook

--- a/manual_gating.ipynb
+++ b/manual_gating.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Manual Gating for Cell Phenotyping"
+    "### Manual Gating for Cell Phenotyping"
    ]
   },
   {
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ecdyer/.conda/envs/data_jam/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning:\n",
+      "/mnt/disks/ecdyer-disk1/miniconda3/envs/v2_data_jam/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning:\n",
       "\n",
       "IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "\n"
@@ -34,6 +34,13 @@
     "import scimap as sm\n",
     "import anndata as ad\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate h5ad File (If Needed). Otherwise, SKIP. "
    ]
   },
   {
@@ -57,11 +64,57 @@
     "# save the annData object (if needed)\n",
     "adata.write('/mnt/disks/ecdyer-disk1/data/MEL01-3-1.h5ad')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load Data and Begin Manual Gating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load Data\n",
+    "adata = ad.read_h5ad('/mnt/disks/ecdyer-disk1/data/leiden_clustered_MEL01-3-1.h5ad')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize GUI\n",
+    "%gui qt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_path = '/mnt/disks/ecdyer-data-disk/MEL01-3-1.ome.tif'\n",
+    "marker_of_interest = 'SOX10_cellRingMask'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sm.pl.gate_finder (image_path, adata, marker_of_interest, from_gate = 5, to_gate = 9, increment = 0.1, point_size=6)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data_jam",
+   "display_name": "v2_data_jam",
    "language": "python",
    "name": "python3"
   },
