Create autogate prediction notebook

--- a/manual_gating.ipynb
+++ b/manual_gating.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/disks/ecdyer-disk1/miniconda3/envs/v2_data_jam/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning:\n",
+      "/mnt/disks/ecdyer-disk1/miniconda3/envs/data_jam/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning:\n",
       "\n",
       "IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "\n"
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "v2_data_jam",
+   "display_name": "data_jam",
    "language": "python",
    "name": "python3"
   },
